--- a/aig-traning/build.gradle
+++ b/aig-traning/build.gradle
@@ -50,8 +50,10 @@ implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile('io.springfox:springfox-swagger-ui:2.9.1')
 	compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml"
 	compile('org.projectlombok:lombok:1.18.0')
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+	
+	
+	   testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
+
 }
 
 bootJar {
